--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # ignore output folder
 output/
-archive/
+_archive/
+_literature
 *.docx
 *.zip
 *.pptx
 *.docx
 *.xlsx
 *.pdf
+*.pub
+*.SESSION
 
 # Windows image file caches
 Thumbs.db
